feat: добавить управление статусами заявок владельцем события
- Проверка прав: только инициатор события может изменять статусы заявок
- Валидация: все заявки должны быть PENDING и принадлежать событию
- При подтверждении проверяется лимит участников; при достижении лимита
  оставшиеся PENDING заявки автоматически отклоняются
- Возвращается EventRequestStatusUpdateResult со списками подтверждённых
  и отклонённых заявок
docs: добавить API документацию Swagger
style: привести код в порядок